# travel-agent-app

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
agents/flight/: Dockerfile
agents/hotel/: Dockerfile
agents/orchestrator/: Dockerfile
eval/: README.md
infra/: agentcore_stack.py  app.py
ios_app/TravelAgent/: ContentView.swift  Info.plist  TravelAgentApp.swift  TravelAgentViewModel.swift
ios_app/TravelAgent.xcodeproj/: project.pbxproj
ios_app/TravelAgent.xcodeproj/xcshareddata/xcschemes/: TravelAgent.xcscheme
ios_app/TravelAgent/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios_app/TravelAgent/Models/: Models.swift
ios_app/TravelAgent/Network/: ApiClient.swift
scripts/: convert_eval_cases.py  evaluate_agents.py  llm_judge.py
specs/: specifications-template.md  split-in-multiple-agents.md
src/agent_runtime/: __init__.py  server.py
src/flight_agent/: __init__.py
src/hotel_agent/: __init__.py  agent.py
src/orchestrator_agent/: __init__.py
src/travel_agent/: __init__.py  __main__.py  agents.py  app.py  main.py  server.py
src/travel_agent/agents/: __init__.py  flight_search.py  orchestrator.py
tests/: conftest.py
tests/agent_runtime/: test_server.py
tests/eval/: test_cases.json
tests/infra/: test_agentcore_stack.py
tests/integration/: test_graph_integration.py
tests/travel_agent/agents/: test_flight_search.py  test_hotel_search.py  test_orchestrator.py
tests/travel_agent/contract/: schemas.py  test_schema_validation.py
ui/: index.html
(+1 files in other folders)
