[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-agent"
version = "0.1.0"
description = "Travel agent demo using the Strands Graph pattern."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "strands-agents[ollama]>=1.22.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "jsonschema>=4.26.0",
]

[project.scripts]
travel-agent = "travel_agent.main:main"
travel-agent-api = "travel_agent.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires local Ollama and is skipped by default"]
filterwarnings = [
    "ignore:BeforeModelCallEvent, AfterModelCallEvent, BeforeToolCallEvent, and AfterToolCallEvent are no longer experimental:DeprecationWarning",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
